package com.adulting101.ManchApp;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ManchAppApplication {

	public static void main(String[] args) {
		SpringApplication.run(ManchAppApplication.class, args);
	}

}
