package com.adulting101.ManchApp.models;

import com.adulting101.ManchApp.enums.Categoria;
import com.adulting101.ManchApp.enums.Nivel;
import jakarta.persistence.*;
import jakarta.validation.constraints.Max;
import jakarta.validation.constraints.Min;
import jakarta.validation.constraints.NotBlank;
import jakarta.validation.constraints.NotNull;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.format.annotation.NumberFormat;

import java.security.PublicKey;

@Entity
@Data
@Table(name = "Manchas")
@AllArgsConstructor
@NoArgsConstructor
@Builder
public class TipoMancha extends Sustancia {

    @Column(nullable = false, name = " categoria_mancha")
    public Categoria CategoriaMancha;

    @NotBlank(message = "El origen no puede estar en blanco")
    @Column(nullable = false, name = "origen_mancha")
    public String origenMancha;


    @Column(nullable = false, name = "dificultad_limpieza")
    @Enumerated(EnumType.STRING)
    public Nivel dificultadLimpieza;


    @Column( name = "urgente")
    public boolean urgente;

    @Column( name = "se_fija_con_calor")
    public boolean seFijaConCalor;


    @Min(value = 0, message = "El valor minimo es 0")
    @Column(name = "tiempo_secado")
    public Double tiempoSecadoHoras;

}
