package com.adulting101.ManchApp.repositories;

import com.adulting101.ManchApp.models.Ingrediente;
import org.springframework.data.jpa.repository.JpaRepository;

public interface IngredienteRepository extends JpaRepository<Ingrediente,Long>{

}
