package com.adulting101.ManchApp.repositories;


import com.adulting101.ManchApp.models.Precauciones;
import com.adulting101.ManchApp.models.Tela;
import org.springframework.data.jpa.repository.JpaRepository;

public interface TelaRepository extends JpaRepository<Tela,Long>{

}
