package com.adulting101.ManchApp.repositories;


import com.adulting101.ManchApp.models.Precauciones;
import com.adulting101.ManchApp.models.TipoMancha;
import org.springframework.data.jpa.repository.JpaRepository;

public interface TipoManchaRepository extends JpaRepository<TipoMancha,Long>{

}
