package com.adulting101.ManchApp.repositories;


import com.adulting101.ManchApp.models.Precauciones;
import com.adulting101.ManchApp.models.Utensilio;
import org.springframework.data.jpa.repository.JpaRepository;

public interface UtensilioRepository extends JpaRepository<Utensilio,Long>{

}
